Fix T75778: Missing ME_VERT_PBVH_UPDATE in Surface Smooth

Without this flag the PBVH won't update taking the modified vertices
into account.

Reviewed By: brecht

Maniphest Tasks: T75778

Differential Revision: https://developer.blender.org/D7453